--- a/калькулятор/calculator.css
+++ b/калькулятор/calculator.css
@@ -1,3 +1,9 @@
+body {
+    background: linear-gradient(#333, #000);
+    background-size: cover;
+    height: 100vh;
+}
+
 .calc {
     margin: 50px auto;
     width: 300px;
